[gd_scene load_steps=45 format=2]

[ext_resource path="res://fonts/pixel.tres" type="DynamicFont" id=1]
[ext_resource path="res://textures/GUI/Menu/MenuSpace.png" type="Texture" id=2]
[ext_resource path="res://textures/GUI/Menu/title.png" type="Texture" id=3]
[ext_resource path="res://textures/GUI/Menu/MenuStars.png" type="Texture" id=4]
[ext_resource path="res://textures/GUI/Menu/MenuPlanets.png" type="Texture" id=5]
[ext_resource path="res://scripts/menu/Menu.gd" type="Script" id=6]
[ext_resource path="res://textures/GUI/Menu/Buttons.png" type="Texture" id=7]
[ext_resource path="res://textures/GUI/Blank.png" type="Texture" id=8]
[ext_resource path="res://textures/GUI/Menu/save_bg.png" type="Texture" id=9]
[ext_resource path="res://assets/saveSelect.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/menu/loadSave.gd" type="Script" id=11]
[ext_resource path="res://Audio/music/TinyPlanets.ogg" type="AudioStream" id=12]
[ext_resource path="res://textures/GUI/Menu/MenuCharacter.png" type="Texture" id=13]
[ext_resource path="res://textures/player/Body/Guy.png" type="Texture" id=14]
[ext_resource path="res://scripts/menu/character.gd" type="Script" id=15]
[ext_resource path="res://textures/player/Hair/Beard.png" type="Texture" id=16]
[ext_resource path="res://textures/GUI/Menu/MenuBtns1.png" type="Texture" id=17]
[ext_resource path="res://textures/GUI/Menu/armor-Guy.png" type="Texture" id=18]
[ext_resource path="res://scripts/menu/CharacterEdit.gd" type="Script" id=19]
[ext_resource path="res://fonts/pixelLineEdit.tres" type="DynamicFont" id=20]
[ext_resource path="res://textures/GUI/Menu/WebDemo2.png" type="Texture" id=21]

[sub_resource type="Curve2D" id=25]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 127, -109.811, 50.8491, 109.811, -50.8491, 113, 51, 0, 0, 0, 0, 279, 21, 0, 0, 0, 0, 286, 157, 0, 0, 0, 0, -15, 158, 0, 0, 0, 0, 0, 127 )
}

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 34, 38, 31, 31 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 104, 240, 56 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 96, 68, 64, 15 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 96, 87, 64, 15 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 73, 52, 23, 14 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 13, 14, 33, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 13 )
region = Rect2( 8, 9, 21, 28 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hair:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=19]
resource_name = "idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hair:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 13 )
region = Rect2( 8, 37, 11, 12 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 13 )
region = Rect2( 30, 37, 11, 12 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 13 )
region = Rect2( 18, 37, 11, 12 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 13 )
region = Rect2( 40, 37, 11, 12 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 13 )
region_rect = Rect2( 31, 18, 88, 11 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 13 )
region = Rect2( 5, 51, 114, 11 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 13 )
region = Rect2( 6, 62, 6, 9 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 13 )
region = Rect2( 112, 62, 6, 9 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 17 )
region = Rect2( 83, 103, 64, 15 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("blank:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Main/Title:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Main/Title:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Main/Buttons:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer:autoplay")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AudioStreamPlayer:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "buttons"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Main/Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "title"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Main/Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56, 16 ), Vector2( 56, 16 ), Vector2( 56, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "zoom"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 120 ), Vector2( 120, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("blank:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:autoplay")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Space" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 7

[node name="Stars" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 7

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 25 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0, 127 )
rotation = -1.15402

[node name="Moon" type="Sprite" parent="Path2D/PathFollow2D"]
rotation = 1.15401
texture = SubResource( 1 )

[node name="Planet" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -56.0
texture = SubResource( 12 )
stretch_mode = 7

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="TextureRect" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -64.0
margin_right = 8.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Main/Title"]
visible = false
margin_top = 8.0
margin_right = 512.0
margin_bottom = 520.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 21 )

[node name="Buttons" type="Control" parent="Main"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Play" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -7.5
margin_right = 32.0
margin_bottom = 7.5
texture_normal = SubResource( 4 )

[node name="Label" type="Label" parent="Main/Buttons/Play"]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "PLAY"
align = 1

[node name="Tutorial" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 10.0
margin_right = 32.0
margin_bottom = 25.0
texture_normal = SubResource( 4 )

[node name="Label" type="Label" parent="Main/Buttons/Tutorial"]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "TUTORIAL"
align = 1

[node name="Credits" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 27.0
margin_right = 32.0
margin_bottom = 42.0
texture_normal = SubResource( 5 )

[node name="Label" type="Label" parent="Main/Buttons/Credits"]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "CREDITS"
align = 1

[node name="World" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = -67.5
margin_right = 59.5
margin_bottom = 67.5

[node name="BG" type="NinePatchRect" parent="World"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
region_rect = Rect2( 2, 2, 120, 108 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="loadSave" type="Control" parent="World"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.5
margin_top = 10.0
margin_right = 54.0
margin_bottom = 96.0
script = ExtResource( 11 )

[node name="back" type="TextureButton" parent="World/loadSave"]
margin_left = -1.5
margin_top = 107.5
margin_right = 21.5
margin_bottom = 121.5
texture_normal = SubResource( 10 )

[node name="new" type="TextureButton" parent="World/loadSave"]
visible = false
margin_left = 17.0
margin_top = 44.0
margin_right = 57.0
margin_bottom = 84.0
texture_normal = SubResource( 11 )

[node name="saves" type="VBoxContainer" parent="World/loadSave"]
margin_right = 79.0
margin_bottom = 85.0
custom_constants/separation = 6

[node name="save1" parent="World/loadSave/saves" instance=ExtResource( 10 )]

[node name="save2" parent="World/loadSave/saves" instance=ExtResource( 10 )]
margin_top = 33.0
margin_bottom = 60.0
id = 1

[node name="save3" parent="World/loadSave/saves" instance=ExtResource( 10 )]
margin_top = 66.0
margin_bottom = 93.0
id = 2

[node name="Label" type="Label" parent="World/loadSave"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -107.5
margin_top = -20.0
margin_right = 107.5
margin_bottom = -12.0
custom_fonts/font = ExtResource( 1 )
text = "*Worlds are not saved in the web demo version"

[node name="character" type="Control" parent="World"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )

[node name="Char" type="TextureRect" parent="World/character"]
margin_left = 3.5
margin_top = 3.5
margin_right = 25.5
margin_bottom = 32.5
texture = SubResource( 13 )

[node name="Body" type="Sprite" parent="World/character/Char"]
position = Vector2( 11, 13 )
texture = ExtResource( 14 )
hframes = 3
vframes = 6
frame = 4

[node name="Armor" type="Sprite" parent="World/character/Char"]
position = Vector2( 11, 13 )
texture = ExtResource( 18 )
hframes = 3
vframes = 6
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="World/character/Char"]
anims/RESET = SubResource( 18 )
anims/idle = SubResource( 19 )

[node name="Hair" type="Sprite" parent="World/character/Char"]
position = Vector2( 11, 13 )
texture = ExtResource( 16 )
hframes = 3
vframes = 6
frame = 3

[node name="Female" type="TextureButton" parent="World/character"]
margin_left = 4.0
margin_top = 32.0
margin_right = 16.0
margin_bottom = 45.0
toggle_mode = true
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 15 )
texture_disabled = SubResource( 15 )

[node name="Male" type="TextureButton" parent="World/character"]
margin_left = 13.5
margin_top = 31.5
margin_right = 25.5
margin_bottom = 44.5
toggle_mode = true
texture_normal = SubResource( 16 )
texture_pressed = SubResource( 17 )
texture_disabled = SubResource( 17 )

[node name="Name" type="LineEdit" parent="World/character"]
margin_left = 29.0
margin_top = 12.0
margin_right = 106.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 20 )
custom_styles/normal = SubResource( 20 )
text = "hello"
max_length = 14
context_menu_enabled = false

[node name="Label" type="Label" parent="World/character/Name"]
margin_left = 1.0
margin_top = -7.0
margin_right = 25.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Name:"

[node name="edit" type="VBoxContainer" parent="World/character"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 46.0
margin_right = -2.0
margin_bottom = -4.0
custom_constants/separation = -1

[node name="SkinCol" type="TextureRect" parent="World/character/edit"]
margin_right = 115.0
margin_bottom = 11.0
texture = SubResource( 21 )
stretch_mode = 1
script = ExtResource( 19 )

[node name="Label" type="Label" parent="World/character/edit/SkinCol"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 0.5
margin_right = 0.5
margin_bottom = 0.5
custom_fonts/font = ExtResource( 1 )
text = "Skin Color"
align = 1
valign = 1

[node name="left" type="TextureButton" parent="World/character/edit/SkinCol"]
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 0.5
margin_right = 6.5
margin_bottom = 0.5
texture_normal = SubResource( 22 )

[node name="right" type="TextureButton" parent="World/character/edit/SkinCol"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = 1.0
margin_right = -1.0
texture_normal = SubResource( 23 )

[node name="HairCol" type="TextureRect" parent="World/character/edit"]
margin_top = 10.0
margin_right = 115.0
margin_bottom = 21.0
texture = SubResource( 21 )
stretch_mode = 1
script = ExtResource( 19 )

[node name="Label" type="Label" parent="World/character/edit/HairCol"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 0.5
margin_right = 0.5
margin_bottom = 0.5
custom_fonts/font = ExtResource( 1 )
text = "Hair Color"
align = 1
valign = 1

[node name="left" type="TextureButton" parent="World/character/edit/HairCol"]
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 0.5
margin_right = 6.5
margin_bottom = 0.5
texture_normal = SubResource( 22 )

[node name="right" type="TextureButton" parent="World/character/edit/HairCol"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = 1.0
margin_right = -1.0
texture_normal = SubResource( 23 )

[node name="HairSty" type="TextureRect" parent="World/character/edit"]
margin_top = 20.0
margin_right = 115.0
margin_bottom = 31.0
texture = SubResource( 21 )
stretch_mode = 1
script = ExtResource( 19 )

[node name="Label" type="Label" parent="World/character/edit/HairSty"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 0.5
margin_right = 0.5
margin_bottom = 0.5
custom_fonts/font = ExtResource( 1 )
text = "Hair Style"
align = 1
valign = 1

[node name="left" type="TextureButton" parent="World/character/edit/HairSty"]
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 0.5
margin_right = 6.5
margin_bottom = 0.5
texture_normal = SubResource( 22 )

[node name="right" type="TextureButton" parent="World/character/edit/HairSty"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = 1.0
margin_right = -1.0
texture_normal = SubResource( 23 )

[node name="Start" type="TextureButton" parent="World/character"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.5
margin_top = -18.0
margin_right = 32.5
margin_bottom = -2.0
texture_normal = SubResource( 24 )

[node name="Label" type="Label" parent="World/character/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Start!"
align = 1
valign = 1

[node name="back" type="TextureButton" parent="World/character"]
margin_left = 4.5
margin_top = 117.5
margin_right = 27.5
margin_bottom = 131.5
texture_normal = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 32, 48 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/buttons = SubResource( 9 )
anims/title = SubResource( 8 )
anims/zoom = SubResource( 7 )

[node name="blank" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Tiny Pixel Planets TU3.1 (v0.3.1)"
align = 1

[node name="Credits" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -51.0
margin_right = 71.0
margin_bottom = 51.0

[node name="BG" type="NinePatchRect" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
region_rect = Rect2( 2, 2, 120, 108 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="back" type="TextureButton" parent="Credits"]
margin_left = 3.0
margin_top = 85.0
margin_right = 26.0
margin_bottom = 99.0
texture_normal = SubResource( 10 )

[node name="Title" type="Label" parent="Credits"]
anchor_right = 1.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0.219122, 0.510774, 0.660156, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Credits"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 13.0
margin_right = -2.0
margin_bottom = -18.0
custom_constants/separation = 2

[node name="Ost" type="Label" parent="Credits/VBoxContainer"]
margin_right = 138.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 1 )
text = "OST - The_Mad_Duck"
align = 1

[node name="Art" type="Label" parent="Credits/VBoxContainer"]
margin_top = 9.0
margin_right = 138.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "Art - SP Possibilities"
align = 1

[node name="Prog" type="Label" parent="Credits/VBoxContainer"]
margin_top = 18.0
margin_right = 138.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "Programming - SP Possibilities"
align = 1

[node name="Prog2" type="Label" parent="Credits/VBoxContainer"]
margin_top = 27.0
margin_right = 138.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "SFX - Mixkit, Kenny Game Assets"
align = 1
autowrap = true

[connection signal="pressed" from="Main/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Buttons/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Main/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="World/loadSave/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="World/character/Female" to="World/character" method="_on_Female_pressed"]
[connection signal="pressed" from="World/character/Male" to="World/character" method="_on_Male_pressed"]
[connection signal="text_changed" from="World/character/Name" to="World/character" method="_on_Name_text_changed"]
[connection signal="pressed" from="World/character/edit/SkinCol/left" to="World/character/edit/SkinCol" method="_on_left_pressed"]
[connection signal="pressed" from="World/character/edit/SkinCol/right" to="World/character/edit/SkinCol" method="_on_right_pressed"]
[connection signal="pressed" from="World/character/edit/HairCol/left" to="World/character/edit/HairCol" method="_on_left_pressed"]
[connection signal="pressed" from="World/character/edit/HairCol/right" to="World/character/edit/HairCol" method="_on_right_pressed"]
[connection signal="pressed" from="World/character/edit/HairSty/left" to="World/character/edit/HairSty" method="_on_left_pressed"]
[connection signal="pressed" from="World/character/edit/HairSty/right" to="World/character/edit/HairSty" method="_on_right_pressed"]
[connection signal="pressed" from="World/character/Start" to="World/character" method="_on_Start_pressed"]
[connection signal="pressed" from="World/character/back" to="World/character" method="_on_back_pressed"]
[connection signal="pressed" from="Credits/back" to="." method="_on_back_pressed"]
